--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </label>
             </div>
             <div class="col-checks">
-                <label class="checkbox-inline">
+                <label class="checkbox-inline -sn">
                     <input type="checkbox" class="checkbox-style"> <span class="lbl">Верстка рассылок</span>
                 </label>
                 <label class="checkbox-inline">
